[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luma-sdk"
version = "0.1.0"
description = "Minimal Python SDK scaffold mirroring PyGithub's architecture"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-recording>=0.13.0",
    "vcrpy>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["luma_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
