[project]
name = "luma-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.13",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "langsmith>=0.7.22",
    "luma-sdk",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "uagents>=0.24.0",
    "uagents-core>=0.4.4",
]

[tool.uv.sources]
luma-sdk = { path = "../" }
